# Parkd

./: .env.base  Dockerfile  LICENSE  README.md  docker-compose.yml  entry.sh  pyproject.toml
api/: serializers.py  tests.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py  utils.py
core/management/commands/: setup_car_bays.py
core/migrations/: 0001_initial.py  0002_alter_booking_options_alter_carbay_options_and_more.py
