[tool.poetry]
name = "parkd"
version = "0.1.0"
description = "Parking booking system API"
authors = ["Md Zubair Ibne Beg <ziibii88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
