[tool.poetry]
name = "parkd"
version = "0.1.0"
description = "Parking booking system API"
authors = ["Md Zubair Ibne Beg <ziibii88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
python-decouple = "^3.6"
psycopg2 = "^2.9.3"
djangorestframework = "^3.13.1"
Markdown = "^3.4.1"
django-filter = "^22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
